# spectre

./: .gitignore  Cargo.toml  README.md
noir-circuit/: Nargo.toml  Prover.toml
noir-circuit/src/: main.nr
src/: client.rs  gen_witness.rs  grumpkin_ops.rs  hash_to_curve.rs  hash_to_curve_grumpkin.rs  lib.rs  main.rs  noir_prover.rs  server.rs  web.rs
tests/: full_nonnative_proof.rs
