[package]
name = "oprf-nullifier"
version = "0.1.0"
edition = "2021"
description = "OPRF nullifier service using constraint-friendly map-to-curve (Groth, Malvai, Miller, Zhang)"

[[bin]]
name = "demo-cli"
path = "src/main.rs"

[[bin]]
name = "demo-web"
path = "src/web.rs"

[[bin]]
name = "gen-witness"
path = "src/gen_witness.rs"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "hash2curve", "expose-field", "sha2"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tempfile = "3"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
